--- a/dev/main/blocks/features/features.pug
+++ b/dev/main/blocks/features/features.pug
@@ -4,7 +4,7 @@
 				"main": "We're Creative Crafting With Love",
 				"behind": "Features"
 			})(class = "features__title")
-		.features__list
+		.features__list.row
 			+feature({
 				"items": [
 					{
