--- a/dev/main/blocks/pricing/pricing.pug
+++ b/dev/main/blocks/pricing/pricing.pug
@@ -4,7 +4,7 @@
 				"main": "Choose your plan",
 				"behind": "Pricing"
 			})(class = "pricing__title")
-		.pricing__plans
+		.pricing__plans.row
 			+plan([
 				{
 					"header":{
