--- a/dev/main/blocks/purchaseBlock/purchaseBlock.pug
+++ b/dev/main/blocks/purchaseBlock/purchaseBlock.pug
@@ -1,26 +1,27 @@
 .purchase
-	.wrapper
-		.row
-			+title({
+	.wrapper.purchase__wrap
+		+title({
 					"main": "Boost Your Website",
 					"behind": "Responsive"
 				})(class = "purchase__title title_align_left")
+		.row
 			.purchase__promo
 				p.purchase__text.text.text_size_m Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etia fermentum vel libero eget interdum semper libero. 
 
 				ul.purchase__list.list.text.text_size_m
 					li.list__item
-						.list__icon
+						+icon('star', 'list__icon')
 						.list__text Responsive Design & Retina Ready.
 					li.list__item
-						.list__icon
+						+icon('star', 'list__icon')
 						.list__text Business Solution Any Company.
 					li.list__item
-						.list__icon
+						+icon('star', 'list__icon')
 						.list__text Powerful Admin Panel.
 					li.list__item
-						.list__icon
+						+icon('star', 'list__icon')
 						.list__text 24/7 Support.
 				+button({
 						"text": "Purchase"
 					})(class = "purchase__btn btn_color_main btn_size_xs btn_textTransform")
+			.purchase__img
