--- a/dev/main/blocks/service/service.pug
+++ b/dev/main/blocks/service/service.pug
@@ -1,10 +1,10 @@
 .service
 	.wrapper
-		+title({
-					"main": "Clean idea and unique design",
-					"behind": "Service"
-			})(class = "service__title title_align_left")
 		.row
+			+title({
+						"main": "Clean idea and unique design",
+						"behind": "Service"
+				})(class = "service__title title_align_left")
 			.service__advantages
 				.row
 					.serviceAdvantage
@@ -27,3 +27,7 @@
 							+icon('bell')
 						.serviceAdvantage__title.subtitle 24/7 Support
 						p.serviceAdvantage__text.text.text_size_m Lorem ipsum doloar sit amet meconstur adipiscing.
+	picture.service__teamPhoto
+		source(srcset="../static/img/general/serviceTeam-885w.jpg, ../static/img/general/serviceTeam-1700w-2x.jpg 2x")
+		img(src="../static/img/general/serviceTeam-885w.jpg", alt="Our service team")
+	
