--- a/dev/main/blocks/team/__members/_member.sass
+++ b/dev/main/blocks/team/__members/_member.sass
@@ -1,11 +1,14 @@
 .member
 	+col()
 	+size-lg(4)
+	position: relative
 	&__name
 		+fontRem(16px)
 	&__info
 		+paddingRem(0, 24px, 0, 24px)
-		background-color: #ebebeb	
+		background-color: #ebebeb
+		&:hover .member__details
+			display: block
 	&__infoItem
 		display: block
 		+paddingRem(24px, 0, 24px, 0)
@@ -21,16 +24,20 @@
 		height: auto
 
 	&__details
+		position: absolute
+		top: 0
+		left: 0
 		+paddingRem(96px, 24px, 0, 24px)
 		text-align: center
 		background-color: $mainColor
 		color: #000
+		display: none
 	&__detailsName
 		+marginRem(0, 0, 23px, 0)
 		font-family: $fontTitle
 		+fontRem(24px)
-		font-weight: bold	
-		text-transform: uppercase 
+		font-weight: bold
+		text-transform: uppercase
 	&__detailsPos
 		@extend .member__detailsName
 		+fontRem(16px)
@@ -45,9 +52,5 @@
 		border-top: 1px dashed $borderColor
 	&__socialLink
 		fill: rgba(0, 0, 0, .5)
-
-
-
-
-
-
+.member:hover .member__details
+	display: block
