--- a/dev/main/index.pug
+++ b/dev/main/index.pug
@@ -20,6 +20,7 @@ block content
 				div
 				div
 	include blocks/mainScreen/mainScreen
+	include modules/header/header
 	include blocks/about/about
 	include blocks/purchaseBlock/purchaseBlock
 	include blocks/features/__featuresList/featuresList
