--- a/dev/main/sass/_smart-grid.sass
+++ b/dev/main/sass/_smart-grid.sass
@@ -222,6 +222,13 @@ $fields_sm: 15px
 =shift-lg-padding-right($n)
     $val: 100% / $columns * $n
     +lg(padding-right, #{calc(#{$val} + #{$offset_lg_one_side})})
+=shift-lg-left-offset($n)
+    $val: 100% / $columns * $n
+    +lg(margin-left, #{calc(#{$val})})
+
+=shift-lg-right-offset($n)
+    $val: 100% / $columns * $n
+    +lg(margin-right, #{calc(#{$val})})
 
 =xs($name, $value)
     @media screen and (min-width: $break_xs)
@@ -271,45 +278,45 @@ $fields_sm: 15px
     body,div,dl,dt,dd,ul,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,input,textarea,p,blockquote,th,td
         margin: 0
         padding: 0
-    
+
     table
         border-collapse: collapse
         border-spacing: 0
-    
+
     fieldset,img,abbr
         border: 0
-    
+
     address,caption,cite,code,dfn,em,strong,th,var
         font-style: normal
         font-weight: normal
-    
+
     ul li
         list-style: none
-    
+
     caption,th
         text-align: left
-    
+
     h1,h2,h3,h4,h5,h6
         font-size: 100%
         font-weight: normal
-    
+
     sup
         vertical-align: text-top
-    
+
     sub
         vertical-align: text-bottom
-    
+
     input,textarea,select
         font-family: inherit
         font-size: inherit
         font-weight: inherit
-    
+
     legend
         color: #000
-    
+
     article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section,main
         display: block
-    
+
     img
         max-width: 100%
         height: auto
@@ -318,15 +325,15 @@ $fields_sm: 15px
     height: 100vh
     position: fixed
     width: 100%
-    
+
     > div
         height: inherit
         +wrapper()
-        
+
         > div
             height: inherit
             +row-flex()
-            
+
             > div
                 +col()
                 +size-lg(1)
@@ -342,4 +349,3 @@ $fields_sm: 15px
         display: block
         content: ""
         clear: both
-    
