--- a/dev/main/sass/_vars.sass
+++ b/dev/main/sass/_vars.sass
@@ -1,11 +1,12 @@
 $mainColor: #ffe400
 $mainColorBlack: #212121
 $textColor: #757575
+$textColorLight: #fff
 $textColorBlack: #444444
 $borderColor: #b7b7b7
 
 
 $fontText: Muli, Arial, sans-serif
+$fontLight: Montserrat-Light, Arial, sans-serif
 $fontTitle: Montserrat-Bold, Arial, sans-serif
 $fontSubtitle: Montserrat-Black, Arial, sans-serif
-
