--- a/dev/main/blocks/purchaseBlock/_purchaseBlock.sass
+++ b/dev/main/blocks/purchaseBlock/_purchaseBlock.sass
@@ -1,7 +1,64 @@
 .purchase
+
+	background-color: #fafafa
+	&__wrap
+		+paddingRem(170px, 0, 117px, 0)
+		position: relative
 	&__title
-		margin-left: $offset_lg_one_side
+		//margin-left: $offset_lg_one_side
+		margin-bottom: 3.625rem
+		.title__main
+			+fontRem(26px)
+		.title__behind
+			+fontRem(72px)
 	&__promo
 		+col
 		+size-lg(6)
-		+shift-lg-right(6)
+	//	+shift-lg-right(6)
+	&__text
+		margin-bottom: 3.75rem
+	&__list
+		+marginRem(0, 0, 36px, 0)
+	&__img
+		width: 50%
+		padding-left: 0
+		position: absolute
+		top: 109px
+		right: 0
+
+		&::after
+			content: "O"
+			display: block
+			font-family: $fontTitle
+			+fontRem(550px)
+			position: absolute
+			top: 4.875rem
+			left: 2rem
+			z-index: 1
+			line-height: .75
+			color: $mainColor
+
+		&::before
+			content: ""
+			display: block
+			width: 100%
+			height: 70vh
+			max-height: 466px
+			position: absolute
+			z-index: 2
+			background: url(../../static/img/general/manRun-581w.png) center top no-repeat
+			background-size: cover
+
+	.list
+		&__item
+			padding: 12px 0 12px 30px
+			position: relative
+		&__icon
+			width: 16px
+			height: 16px
+			position: absolute
+			top: 50%
+			margin-top: -8px
+			left: 0
+			fill: $textColor
+		&__text
