--- a/dev/main/blocks/service/_service.sass
+++ b/dev/main/blocks/service/_service.sass
@@ -1,11 +1,47 @@
 .service
+	+paddingRem(161px, 0, 72px, 0)
+	position: relative
+	overflow: hidden
+	&__title
+		+marginRem(0, 0, 102px, 0)
+		+col
+		+size-lg(6)
+		+shift-lg-left(6)
 	&__advantages
 		+col()
 		+size-lg(6)
 		+shift-lg-left(6)
+	&__teamPhoto
+		width: 45%
+		height: auto
+		position: absolute
+		bottom: 0
+		left: 0
+	&::before
+		content: "O"
+		display: block
+		font-family: $fontTitle
+		+fontRem(1200px)
+		position: absolute
+		left: -26.5rem
+		bottom: -13rem
+		line-height: .75
+		color: $mainColor
+		opacity: .7
+		z-index: 2
+
+	// &::after
+	// 	content: ""
+	// 	display: block
+	// 	width: 50%
+	// 	height: 100vh
+	// 	max-height: 721px
+	// 	background: url(../../static/img/general/team-884w.png) left bottom no-repeat
+	// 	background-size: cover
+
 .serviceAdvantage
 	width: 50%
-	+paddingRem(51px, 0, 60px, 0)	
+	+paddingRem(51px, 0, 60px, 0)
 	box-sizing: border-box
 	text-align: center
 	border-top: 1px solid gray
