--- a/dev/main/modules/header/header.pug
+++ b/dev/main/modules/header/header.pug
@@ -1,4 +1,9 @@
 header.header
-	.header__logo.logo
-	.header__nav
-		include ../menu/menu
+	.wrapper
+		.row
+			.header__logo.logo
+				picture.member__img
+					source(srcset="static/img/general/logo.png, static/img/general/logo-2x.png")
+					img(src="static/img/general/logo.png", alt="Marvel")
+			.header__nav
+				include ../menu/menu
