--- a/dev/static/fonts/font.css
+++ b/dev/static/fonts/font.css
@@ -1,11 +1,11 @@
 @font-face {
-  font-family: 'Montserrat-Bold';
-  src: url('Montserrat-Bold.eot');
-  src: url('Montserrat-Bold.woff2') format('woff2'),
-       url('Montserrat-Bold.woff') format('woff'),
-       url('Montserrat-Bold.ttf') format('truetype'),
-       url('Montserrat-Bold.svg#Montserrat-Bold') format('svg'),
-       url('Montserrat-Bold.eot?#iefix') format('embedded-opentype');
+  font-family: 'Montserrat-Light';
+  src: url('Montserrat-Light.eot');
+  src: url('Montserrat-Light.woff2') format('woff2'),
+       url('Montserrat-Light.woff') format('woff'),
+       url('Montserrat-Light.ttf') format('truetype'),
+       url('Montserrat-Light.svg#Montserrat-Light') format('svg'),
+       url('Montserrat-Light.eot?#iefix') format('embedded-opentype');
   font-weight: normal;
   font-style: normal;
 }
