--- a/dev/static/fonts/fonts.css
+++ b/dev/static/fonts/fonts.css
@@ -9,6 +9,18 @@
   font-style: normal;
 }
 @font-face {
+  font-family: 'Montserrat-Light';
+  src: url('Montserrat-Light.woff2') format('woff2'),
+       url('Montserrat-Light.woff') format('woff'),
+       url('Montserrat-Light.ttf') format('truetype'),
+       url('Montserrat-Light.svg#Montserrat-Light') format('svg'),
+       url('Montserrat-Light.eot?#iefix') format('embedded-opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+@font-face {
   font-family: 'Montserrat-Black';
   src: url('Montserrat-Black.woff2') format('woff2'),
        url('Montserrat-Black.woff') format('woff'),
@@ -29,4 +41,3 @@
   font-weight: normal;
   font-style: normal;
 }
-
