--- a/dev/main/main.sass
+++ b/dev/main/main.sass
@@ -18,11 +18,12 @@
 
 // Блоки
 @import 'blocks/mainScreen/mainScreen'
-@import 'blocks/about/about' 
+@import 'blocks/about/about'
 @import 'blocks/purchaseBlock/purchaseBlock'
 @import 'blocks/features/features'
 @import 'blocks/features/__featuresList/featuresList'
 @import 'blocks/gallery/gallery'
+@import 'blocks/gallery/__portfolioItem/portfolioItem'
 @import 'blocks/service/service'
 @import 'blocks/pricing/pricing'
 @import 'blocks/pricing/__plans/plan'
