--- a/dev/main/index.pug
+++ b/dev/main/index.pug
@@ -25,6 +25,7 @@ block content
 	include blocks/purchaseBlock/purchaseBlock
 	include blocks/features/__featuresList/featuresList
 	include blocks/features/features
+	include blocks/gallery/__portfolioItem/portfolioItem
 	include blocks/gallery/gallery
 	include blocks/service/service
 	include blocks/pricing/__plans/plan
