--- a/dev/main/main.pug
+++ b/dev/main/main.pug
@@ -14,6 +14,9 @@ html(lang="en")
 		link(rel="apple-touch-icon" sizes="180x180" href="static/img/general/icons/compass180x180.png")
 		link(rel="stylesheet" type='text/css' href="main/css/reset.css")
 		link(rel="stylesheet" type='text/css' href="static/fonts/fonts.css") 
+		link(rel="stylesheet" type='text/css' href="main/css/magnificPopup.css")
+		link(rel="stylesheet" type="text/css" href="../static/libs/slick/slick.css")
+		link(rel="stylesheet" type="text/css" href="../static/libs/slick/slick-theme.css")
 		link(rel="stylesheet" type='text/css' href="main/css/main.css")
 
 		title
@@ -24,6 +27,9 @@ html(lang="en")
 		include modules/title/title
 		block content
 		include modules/footer/footer
-		script(src="static/js/jquery.js")
-		script(src="static/js/libs.min.js")
-		script(src="static/js/main.js")
+		script(src="../static/js/jquery.js")
+		script(src="../static/js/libs.min.js")
+		//script(src='../static/libs/magnificPopUp.js')
+		script(src="../static/libs/slick/slick.min.js")
+		script(src="../static/libs/magnific/jquery.magnific-popup.min.js")
+		script(src="../static/js/main.js")
