--- a/dev/static/libs/slick/slick-theme.css
+++ b/dev/static/libs/slick/slick-theme.css
@@ -1,8 +1,7 @@
-@charset 'UTF-8';
 /* Slider */
 .slick-loading .slick-list
 {
-    background: #fff url('../img/plugins/ajax-loader.gif') center center no-repeat;
+    background: #fff url('./ajax-loader.gif') center center no-repeat;
 }
 
 /* Icons */
@@ -12,8 +11,8 @@
     font-weight: normal;
     font-style: normal;
 
-    src: url('../fonts/slick.eot');
-    src: url('../fonts/slick.eot?#iefix') format('embedded-opentype'), url('../fonts/slick.woff') format('woff'), url('../fonts/slick.ttf') format('truetype'), url('../fonts/slick.svg#slick') format('svg');
+    src: url('./fonts/slick.eot');
+    src: url('./fonts/slick.eot?#iefix') format('embedded-opentype'), url('./fonts/slick.woff') format('woff'), url('./fonts/slick.ttf') format('truetype'), url('./fonts/slick.svg#slick') format('svg');
 }
 /* Arrows */
 .slick-prev,
@@ -114,6 +113,10 @@
 }
 
 /* Dots */
+.slick-dotted.slick-slider
+{
+    margin-bottom: 30px;
+}
 
 .slick-dots
 {
@@ -132,6 +135,10 @@
 }
 .slick-dots li
 {
+    position: relative;
+
+    display: inline-block;
+
     width: 20px;
     height: 20px;
     margin: 0 5px;
@@ -167,4 +174,30 @@
 {
     opacity: 1;
 }
+.slick-dots li button:before
+{
+    font-family: 'slick';
+    font-size: 6px;
+    line-height: 20px;
 
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 20px;
+    height: 20px;
+
+    content: '•';
+    text-align: center;
+
+    opacity: .25;
+    color: black;
+
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+.slick-dots li.slick-active button:before
+{
+    opacity: .75;
+    color: black;
+}
