--- a/dev/static/libs/slick/slick.css
+++ b/dev/static/libs/slick/slick.css
@@ -55,6 +55,8 @@
     left: 0;
 
     display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 .slick-track:before,
 .slick-track:after
@@ -77,14 +79,17 @@
     display: none;
     float: left;
 
-    height: 100vh;
+    height: 100%;
     min-height: 1px;
 }
 [dir='rtl'] .slick-slide
 {
     float: right;
 }
-
+.slick-slide img
+{
+    display: block;
+}
 .slick-slide.slick-loading img
 {
     display: none;
@@ -105,7 +110,7 @@
 {
     display: block;
 
-    height: 100vh;
+    height: auto;
 
     border: 1px solid transparent;
 }
